<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/employee_name_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
           android:textFontWeight="900"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_price"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/price_audi"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_700"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_description"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/audi_r8_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_700"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="40dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_update"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingHorizontal="15dp"

            android:layout_gravity="center"
            android:text="@string/update_btn_txt"
            android:backgroundTint="@color/teal_700"/>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_delete"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:paddingHorizontal="5dp"
        android:text="@string/delete_btn_txt"
        android:layout_gravity="center"
        android:backgroundTint="@color/red" />

    </LinearLayout>



</LinearLayout>